# Iterative-Closest-Point

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: icp.h  pointcloud.h  svd3.h  utilityCore.hpp
src/: icp.cpp  main.cpp  pointcloud.cpp  utilityCore.cpp
visualizations/: convert.py  test.py  visualize.py
